<resources>
    <string name="app_name">Password Helper</string>
    <string name="password">Пароль</string>
    <string name="toast_text_copied">Текст скопирован</string>
    <string name="u_can_generate_new_password">Сгенерировать новый пароль</string>
    <string name="password_ru">Пароль на русском</string>
    <string name="password_length">Длина пароля</string>
    <string name="upper_case">Заглавные</string>
    <string name="symbols">Символы</string>
    <string name="numbers">Цифры</string>
    <string name="bits">%1$d бит</string>
    <string name="convert_password">Преобразовать пароль</string>
    <string name="translated_tag">translated</string>
    <string name="generated_tag">generated</string>
    <string name="unlock">Разблокировать</string>
    <string name="master_password">Мастер-пароль</string>
    <string name="creating_new_master_password">Создание мастер-пароля для нового хранилища</string>
    <string name="master_password_desc">Мастер-пароль - это единственный пароль, который вам потребуется запомнить. Запомните его, так как мастер-пароль нигде не хранится и его нельзя восстановить.</string>
    <string name="new_master_password">Новый мастер-пароль</string>
    <string name="enter_master_password_again">Введите мастер-пароль еще раз</string>
    <string name="proceed">Продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="label">Password Saver</string>
    <string name="forgot_master_password"><u>Забыли мастер-пароль?</u></string>
    <string name="reset_password_desc">К сожалению, мастер-пароль невозможно восстановить в целях безопасности.  Вы можете создать новое хранилище, а все сохраненные данные из предыдущего будут удалены.</string>
    <string name="reset_password_and_delete">Сбросить мастер-пароль и удалить все данные?</string>
    <string name="reset_and_delete">Сборосить и удалить</string>

    <plurals name="symbols_count">
        <item quantity="one">%1$d символ</item>
        <item quantity="two">%1$d символа</item>
        <item quantity="few">%1$d символа</item>
        <item quantity="many">%1$d символов</item>
        <item quantity="other">%1$d символов</item>
    </plurals>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>

    </string-array>

    <string-array name="latins">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="site_address">Адрес сайта</string>
    <string name="login">Логин</string>
    <string name="please_enter_a_password">Создание логина и пароля</string>
    <string name="passwords_not_match">Пароли не совпадают!</string>
    <string name="wrong_master_password">Неверный мастер-пароль!</string>
    <string name="show_saved_passwords">Show saved passwords</string>
    <string name="field_must_not_be_empty">Поле не должно быть пустым</string>


</resources>
