<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:padding="@dimen/padding_main"
    tools:context=".screens.resetmasterpassword.ResetMasterPasswordActivity">

    <TextView
        android:id="@+id/reset_password_header"
        style="@style/TextAppearanceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_and_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_password_desc"
        style="@style/TextAppearanceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/reset_password_desc"
        app:layout_constraintTop_toBottomOf="@id/reset_password_header" />

    <Button
        android:id="@+id/reset_password"
        style="@style/ButtonSolid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/reset_and_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_desc" />

    <Button
        android:id="@+id/cancel"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_components"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password" />

</androidx.constraintlayout.widget.ConstraintLayout>