<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/material_blue"
            android:contentInsetStart="0dp">

            <TextView
                style="@style/ResultTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_blue"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/text_result"
                style="@style/ResultTextView"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/result_margin"
                android:layout_marginBottom="@dimen/result_margin"
                android:layout_toStartOf="@id/copy_password_button"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/copy_password_button"
                style="@style/ImageButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/complexity_input"
                style="@style/ComplexityView" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_length"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@color/blue_grey_500" />

        <EditText
            android:id="@+id/password_input"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/new_input_bg"
            android:hint="@string/password_ru"
            android:inputType="text"
            android:textColor="@color/grey_800" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/blue_grey_100" />

        <TextView
            style="@style/HeadTextView"
            android:background="@color/material_blue"
            android:paddingTop="8dp"
            android:text="@string/u_can_generate_new_password"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_blue"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/text_result_generated"
                style="@style/ResultTextView"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/result_margin"
                android:layout_marginBottom="@dimen/result_margin"
                android:layout_toStartOf="@id/copy_password_generated_button"
                android:text="Result"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/copy_password_generated_button"
                style="@style/ImageButton"
                android:layout_toStartOf="@id/regenerate_password_button"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:tint="@color/white" />

            <ImageButton
                android:id="@+id/regenerate_password_button"
                style="@style/ImageButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_refresh_black_24dp"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/complexity_generated"
                style="@style/ComplexityView" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:textColor="@color/blue_grey_500" />

            <TextView
                android:id="@+id/password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:textColor="@color/blue_grey_500" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:max="20"
                android:progressBackgroundTint="@color/blue_grey_500"
                android:progressTint="@color/material_blue"
                android:thumbTint="@color/material_blue" />

            <Switch
                android:id="@+id/check_caps"
                style="@style/Switch"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/material_blue"
                android:checked="true"
                android:text="@string/upper_case" />

            <Switch
                android:id="@+id/check_symbols"
                style="@style/Switch"
                android:checked="true"
                android:text="@string/symbols" />

            <Switch
                android:id="@+id/check_numbers"
                style="@style/Switch"
                android:checked="false"
                android:text="@string/numbers" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>