<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/site_input"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_border"
        android:hint="@string/site_address"
        android:inputType="textWebEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_input"
        style="@style/Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_border"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/copy_login"
        app:layout_constraintStart_toStartOf="@id/site_input"
        app:layout_constraintTop_toBottomOf="@id/site_input" />

    <ImageButton
        android:id="@+id/copy_login"
        style="@style/ImageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:tint="@color/grey_800"
        app:layout_constraintBottom_toBottomOf="@id/login_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_input"
        app:layout_constraintTop_toTopOf="@id/login_input" />

    <EditText
        android:id="@+id/password_input"
        style="@style/Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/copy_password"
        app:layout_constraintStart_toStartOf="@id/site_input"
        app:layout_constraintTop_toBottomOf="@id/login_input" />

    <ImageButton
        android:id="@+id/copy_password"
        style="@style/ImageButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_content_copy_black_24dp"
        android:tint="@color/grey_800"
        app:layout_constraintBottom_toBottomOf="@id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_input"
        app:layout_constraintTop_toTopOf="@id/password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>