<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:padding="@dimen/padding_main">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/site_input_layout"
        style="@style/InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/site_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/site_input"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout"
        style="@style/InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:layout_constraintEnd_toStartOf="@id/copy_password"
        app:layout_constraintStart_toStartOf="@id/site_input_layout"
        app:layout_constraintTop_toBottomOf="@id/site_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/copy_login"
        style="@style/ImageButtonCopy"
        android:layout_width="@dimen/height_image_button"
        android:layout_height="@dimen/height_image_button"
        app:layout_constraintBottom_toBottomOf="@id/login_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_input_layout"
        app:layout_constraintTop_toTopOf="@id/login_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/InputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toStartOf="@id/copy_password"
        app:layout_constraintStart_toStartOf="@id/site_input_layout"
        app:layout_constraintTop_toBottomOf="@id/login_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/copy_password"
        style="@style/ImageButtonCopy"
        android:layout_width="@dimen/height_image_button"
        android:layout_height="@dimen/height_image_button"
        app:layout_constraintBottom_toBottomOf="@id/password_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_input_layout"
        app:layout_constraintTop_toTopOf="@id/password_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>